# silkworm-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  docker-entrypoint.sh  justfile  mcp_server.py  mcp_test.py  pyproject.toml
src/silkworm_mcp/: __init__.py  constants.py  documents.py  helpers.py  models.py  resources.py  runtime.py  server.py  settings.py  templates.py  tools.py
tests/: test_e2e.py  test_mcp.py  test_mcp_server.py
