[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "silkworm-mcp"
version = "0.2.0"
description = "An MCP server for https://github.com/BitingSnakes/silkworm"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.1.1",
    "pydantic>=2.12.5",
    "scraper-rust>=0.4.1",
    "silkworm-rs>=0.4.0",
]

[project.scripts]
silkworm-mcp = "mcp_server:main"

[tool.setuptools]
py-modules = ["mcp_server"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
