[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "silkworm-mcp"
version = "0.2.6"
description = "An MCP server for https://github.com/BitingSnakes/silkworm"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cssselect2>=0.9.0",
    "cssutils>=2.11.1",
    "fastmcp>=3.1.1",
    "grex>=1.0.2",
    "pydantic>=2.12.5",
    "scraper-rust>=0.4.3",
    "silkworm-rs>=0.4.4",
    "tinycss2>=1.5.1",
]

[project.scripts]
silkworm-mcp = "silkworm_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
